## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with stage0.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added support for envp in cc_x86.s

** Changed
Reduced stack usage thanks to akkartik
Changed argv, argc behavior in cc_x86.s
updated stage3/M2-Planet_x86.c to commit 56db0fcad4b3362d14d20e69a17e45d751c264a5
updated stage3/get_machine.c to new form for M2-Planet

** Fixed
Add debug label
Correct sha256sum that wasn't updated by change
Fixed checksums that were wrong in previous commit
Fixed description of RET to clarify order of operations

** Removed

* 0.2.0 - 2018-08-26
** Added
Added an x86 C compiler capable of Building M2-Planet from source
Added M2-Planet v1.0 as a single file
Added M1-Macro Generated from 40537c0200ad28cd5090bc0776251d5983ef56e3 in mescc-tools
Added hex2_linker Generated from 40537c0200ad28cd5090bc0776251d5983ef56e3 in mescc-tools
Added blood-elf Generated from 40537c0200ad28cd5090bc0776251d5983ef56e3 in mescc-tools
Added get_machine Generated from 40537c0200ad28cd5090bc0776251d5983ef56e3 in mescc-tools

** Changed

** Fixed

** Removed

* 0.1.0 - 2018-03-20
** Added
Added the ability to remove watch points in the webide
Added program to search for unusual characters that are not human detectable

** Changed
Expanded stage0 web IDE to include the PC and instruction counter
Performance tuned hex1 to reduce both size and instruction count
Performance tuned hex0 to reduce both size and instruction count
Performance tuned hex2 to reduce both size and isntruction count
The stage0 vm now halts on ALL invalid instructions
Displacements in the Stage0-vm no longer match that of the Knight hardware platform; instead of from the start of the instruction, from the end of the immediate to the target address.